--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 minifb = "0.27.0"
+nalgebra = "0.33.0"
 rand = "0.8.5"
 serde = "1.0.204"
 serde_json = "1.0.120"
